# cola-colab

./: Procfile  README.md  pyproject.toml  requirements.txt  whitepaper.tex
cola_colab/: app.py  data.py  text.yaml
cola_colab/assets/: gtag.js
cola_colab/data/: hud_data.csv  uc_expenses_1819.csv  uc_net_stipend_per_capita_by_discipline_manual_masters.csv  uc_net_stipend_per_capita_by_discipline_manual_phd.csv  uc_research_1819.csv  uc_revenues_1819.csv  ucopsurvey_data.csv
cola_colab/data/raw_data/graduate_student_support_tabels/: gradsupport_0708_pc_allacad.xls  gradsupport_0708_pc_ma.xls  gradsupport_0708_pc_phd.xls  gradsupport_0708_pc_prof.xls  gradsupport_0708_td_allacad.xls  gradsupport_0708_td_ma.xls  gradsupport_0708_td_phd.xls  gradsupport_0708_td_prof.xls  gradsupport_0809_pc_allacad.xls  gradsupport_0809_pc_ma.xls  gradsupport_0809_pc_phd.xls  gradsupport_0809_pc_prof.xls  gradsupport_0809_td_allacad.xls  gradsupport_0809_td_ma.xls  gradsupport_0809_td_phd.xls  gradsupport_0809_td_prof.xls  gradsupport_0910_pc_allacad.xlsx  gradsupport_0910_pc_ma.xlsx  gradsupport_0910_pc_phd.xlsx  gradsupport_0910_pc_prof.xlsx  gradsupport_0910_td_allacad.xlsx  gradsupport_0910_td_ma.xlsx  gradsupport_0910_td_phd.xlsx  gradsupport_0910_td_prof.xlsx  gradsupport_1011_pc_allacad.xlsx  gradsupport_1011_pc_ma.xlsx  gradsupport_1011_pc_phd.xlsx  gradsupport_1011_pc_prof.xlsx  gradsupport_1011_td_allacad.xlsx  gradsupport_1011_td_ma.xlsx  gradsupport_1011_td_phd.xlsx  gradsupport_1011_td_prof.xlsx  gradsupport_1112_pc_allacad.xlsx  gradsupport_1112_pc_ma.xlsx  (+38 more)
