[tool.poetry]
name = "cola-colab"
version = "0.1.0"
description = ""
authors = ["Matthew Horton <mkhorton@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
plotly = "^4.5.1"
dash = "^1.9.0"
monty = "^3.0.2"
"ruamel.yaml" = "^0.16.10"
gunicorn = "^20.0.4"
gevent = "^1.4.0"
pyarrow = "^0.16.0"
flask-caching = "^1.8.0"
redis = "^3.4.1"
scout-apm = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
